@@ -1,2 +1,5 @@
-#SUBDIRS=tinyxml libwfut tools
-SUBDIRS= libwfut tools
+SUBDIRS=libwfut tools
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libwfut-0.1.pc
+
